force-app/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Impact__c.field-meta.xml
<CustomField>
    <fullName>BLND_Impact__c</fullName>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>