force-app/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Issue_Raised_On__c.field-meta.xml
<CustomField>
    <fullName>BLND_Issue_Raised_On__c</fullName>
    <label>Issue Raised On</label>
    <type>Date</type>
</CustomField>