force-app/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Resolution__c.field-meta.xml
<CustomField>
    <fullName>BLND_Resolution__c</fullName>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>