force-app/main/default/objects/BLND_DFDT_Issue__c/fields/BLND_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>BLND_Task_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Link</label>
    <referenceTo>BLND_DFDT_Task__c</referenceTo>
    <relationshipLabel>DreamTeam Issues</relationshipLabel>
    <relationshipName>R00N30000002PYjGEAW</relationshipName>
    <type>Lookup</type>
</CustomField>